<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/ColumnStyle"
                android:background="@color/columnHome">

                <EditText
                    style="@style/HomeTeamName"
                    android:background="@color/backgroundMain"
                    android:inputType="textCapWords"
                    android:padding="@dimen/homeTeamPadding"
                    android:textSize="@dimen/homeTeamText" />

                <TextView
                    android:id="@+id/home_score"
                    style="@style/ScoreStyle"
                    android:background="@color/backgroundScore"
                    android:maxLength="@string/maxCount"
                    android:paddingTop="@dimen/scorePaddingTop"
                    android:text="@string/textCount"
                    android:textColor="@color/scoresColor"
                    android:textSize="@dimen/scoreTextSize" />

                <LinearLayout
                    style="@style/Stats"
                    android:layout_marginBottom="@dimen/statsMarginBottom"
                    android:background="@color/backgroundScore">

                    <TextView
                        android:id="@+id/home_fouls"
                        style="@style/FoulsStyle"
                        android:maxLength="@string/maxCount"
                        android:text="@string/textCount"
                        android:textColor="@color/scoresColor"
                        android:textSize="@dimen/statsTextSize" />

                    <TextView
                        android:id="@+id/home_yellows"
                        style="@style/YellowsStyle"
                        android:layout_width="wrap_content"
                        android:maxLength="@string/maxCount"
                        android:paddingLeft="@dimen/yellowsPaddingLeft"
                        android:paddingRight="@dimen/yellowsPaddingRight"
                        android:text="@string/textCount"
                        android:textColor="@color/scoresColor"
                        android:textSize="@dimen/statsTextSize" />

                    <TextView
                        android:id="@+id/home_reds"
                        style="@style/RedsStyle"
                        android:maxLength="@string/maxCount"
                        android:text="@string/textCount"
                        android:textColor="@color/scoresColor"
                        android:textSize="@dimen/statsTextSize" />
                </LinearLayout>

                <Button
                    style="@style/CountButtonStyle"
                    android:layout_marginBottom="@dimen/buttonMarginBottom"
                    android:layout_marginLeft="@dimen/buttonMarginLeft"
                    android:layout_marginRight="@dimen/buttonMarginRight"
                    android:onClick="addHomeGoal"
                    android:padding="@dimen/buttonPadding"
                    android:text="@string/goalButton" />

                <Button
                    style="@style/CountButtonStyle"
                    android:layout_marginBottom="@dimen/buttonMarginBottom"
                    android:layout_marginLeft="@dimen/buttonMarginLeft"
                    android:layout_marginRight="@dimen/buttonMarginRight"
                    android:onClick="addHomeFouls"
                    android:padding="@dimen/buttonPadding"
                    android:text="@string/foulButton" />

                <Button
                    style="@style/CountButtonStyle"
                    android:layout_marginBottom="@dimen/buttonMarginBottom"
                    android:layout_marginLeft="@dimen/buttonMarginLeft"
                    android:layout_marginRight="@dimen/buttonMarginRight"
                    android:onClick="addHomeYellows"
                    android:padding="@dimen/buttonPadding"
                    android:text="@string/yellowCardButton" />

                <Button
                    style="@style/CountButtonStyle"
                    android:layout_marginBottom="@dimen/buttonMarginBottom"
                    android:layout_marginLeft="@dimen/buttonMarginLeft"
                    android:layout_marginRight="@dimen/buttonMarginRight"
                    android:onClick="addHomeReds"
                    android:padding="@dimen/buttonPadding"
                    android:text="@string/redCardButton" />
            </LinearLayout>

            <View
                style="@style/ViewStyle"
                android:layout_marginTop="@dimen/viewMarginTop"
                android:background="@color/grey" />

            <LinearLayout
                style="@style/ColumnStyle"
                android:background="@color/columnAway">

                <EditText
                    style="@style/AwayTeamName"
                    android:background="@color/backgroundMain"
                    android:inputType="textCapWords"
                    android:padding="@dimen/awayTeamPadding"
                    android:textSize="@dimen/awayTeamText" />

                <TextView
                    android:id="@+id/away_score"
                    style="@style/ScoreStyle"
                    android:background="@color/backgroundScore"
                    android:maxLength="@string/maxCount"
                    android:paddingTop="@dimen/scorePaddingTop"
                    android:text="@string/textCount"
                    android:textColor="@color/scoresColor"
                    android:textSize="@dimen/scoreTextSize" />

                <LinearLayout
                    style="@style/Stats"
                    android:layout_marginBottom="@dimen/statsMarginBottom"
                    android:background="@color/backgroundScore">

                    <TextView
                        android:id="@+id/away_fouls"
                        style="@style/FoulsStyle"
                        android:maxLength="@string/maxCount"
                        android:text="@string/textCount"
                        android:textColor="@color/scoresColor"
                        android:textSize="@dimen/statsTextSize" />

                    <TextView
                        android:id="@+id/away_yellows"
                        style="@style/YellowsStyle"
                        android:maxLength="@string/maxCount"
                        android:paddingLeft="@dimen/yellowsPaddingLeft"
                        android:paddingRight="@dimen/yellowsPaddingRight"
                        android:text="@string/textCount"
                        android:textColor="@color/scoresColor"
                        android:textSize="@dimen/statsTextSize" />

                    <TextView
                        android:id="@+id/away_reds"
                        style="@style/RedsStyle"
                        android:maxLength="@string/maxCount"
                        android:text="@string/textCount"
                        android:textColor="@color/scoresColor"
                        android:textSize="@dimen/statsTextSize" />
                </LinearLayout>

                <Button
                    style="@style/CountButtonStyle"
                    android:layout_marginBottom="@dimen/buttonMarginBottom"
                    android:layout_marginLeft="@dimen/buttonMarginLeft"
                    android:layout_marginRight="@dimen/buttonMarginRight"
                    android:onClick="addAwayGoal"
                    android:padding="@dimen/buttonPadding"
                    android:text="@string/goalButton" />

                <Button
                    style="@style/CountButtonStyle"
                    android:layout_marginBottom="@dimen/buttonMarginBottom"
                    android:layout_marginLeft="@dimen/buttonMarginLeft"
                    android:layout_marginRight="@dimen/buttonMarginRight"
                    android:onClick="addAwayFouls"
                    android:padding="@dimen/buttonPadding"
                    android:text="@string/foulButton" />

                <Button
                    style="@style/CountButtonStyle"
                    android:layout_marginBottom="@dimen/buttonMarginBottom"
                    android:layout_marginLeft="@dimen/buttonMarginLeft"
                    android:layout_marginRight="@dimen/buttonMarginRight"
                    android:onClick="addAwayYellows"
                    android:padding="@dimen/buttonPadding"
                    android:text="@string/yellowCardButton" />

                <Button
                    style="@style/CountButtonStyle"
                    android:layout_marginBottom="@dimen/buttonMarginBottom"
                    android:layout_marginLeft="@dimen/buttonMarginLeft"
                    android:layout_marginRight="@dimen/buttonMarginRight"
                    android:onClick="addAwayReds"
                    android:padding="@dimen/buttonPadding"
                    android:text="@string/redCardButton" />
            </LinearLayout>
        </LinearLayout>

        <Button
            style="@style/ResetButtonStyle"
            android:layout_marginLeft="@dimen/resetMarginLeft"
            android:layout_marginRight="@dimen/resetMarginRight"
            android:layout_marginTop="@dimen/resetMarginTop"
            android:onClick="resetMatch"
            android:padding="@dimen/resetPadding"
            android:text="@string/newMatchButton" />
    </LinearLayout>
</ScrollView>

